--- a/docs/keras-tuner.ipynb
+++ b/docs/keras-tuner.ipynb
@@ -101,13 +101,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
+     ]
+    }
+   ],
    "source": [
     "import keras_tuner as kt\n",
     "\n",
@@ -148,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -194,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -202,20 +211,12 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-04-08 14:23:15.742318: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x7ff43103b790>"
+       "<keras.engine.sequential.Sequential at 0x7fe98a0fca30>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -294,10 +295,10 @@
     {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x7ff4132a5a30>"
+       "<keras.engine.sequential.Sequential at 0x7fe98a138730>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -388,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -420,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -474,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -492,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -553,7 +554,7 @@
        "        [0, 0, 0, ..., 0, 0, 0]]], dtype=uint8)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -577,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -635,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -647,17 +648,17 @@
      "output_type": "stream",
      "text": [
       "Trial 3 Complete [00h 00m 10s]\n",
-      "val_accuracy: 0.9690000116825104\n",
+      "val_accuracy: 0.9515500068664551\n",
       "\n",
-      "Best val_accuracy So Far: 0.9712499976158142\n",
-      "Total elapsed time: 00h 00m 35s\n",
+      "Best val_accuracy So Far: 0.9719000160694122\n",
+      "Total elapsed time: 00h 00m 34s\n",
       "INFO:tensorflow:Oracle triggered exit\n"
      ]
     }
    ],
    "source": [
     "# Create TensorBoard folders\n",
-    "log_dir = \"tmp/fit/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "log_dir = \"tmp/tb_logs/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
     "\n",
     "tuner.search(\n",
     "    x_train,\n",
@@ -695,19 +696,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6007 (pid 9162), started 0:26:39 ago. (Use '!kill 9162' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-4db6a4176968245e\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-a28e37ae1b3b98d5\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-4db6a4176968245e\");\n",
-       "          const url = new URL(\"/\", window.location);\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-a28e37ae1b3b98d5\");\n",
+       "          const url = new URL(\"http://localhost\");\n",
        "          const port = 6007;\n",
        "          if (port) {\n",
        "            url.port = port;\n",
@@ -731,7 +741,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "If TensorBoard does not open a window, try to use the following code to start TensorBoard:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -743,8 +762,8 @@
      "output_type": "stream",
      "text": [
       "Known TensorBoard instances:\n",
-      "  - port 6006: logdir logs/fit (started 5:18:24 ago; pid 2825)\n",
-      "  - port 6007: logdir /tmp/tb_logs (started 0:00:09 ago; pid 9162)\n"
+      "  - port 6006: logdir logs/fit (started 5:45:52 ago; pid 2825)\n",
+      "  - port 6007: logdir /tmp/tb_logs (started 0:27:37 ago; pid 9162)\n"
      ]
     }
    ],
@@ -755,49 +774,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selecting TensorBoard with logdir /tmp/tb_logs (started 0:02:32 ago; port 6007, pid 9162).\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "      <iframe id=\"tensorboard-frame-40916bb26d4e7d9a\" width=\"100%\" height=\"1000\" frameborder=\"0\">\n",
-       "      </iframe>\n",
-       "      <script>\n",
-       "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-40916bb26d4e7d9a\");\n",
-       "          const url = new URL(\"http://localhost\");\n",
-       "          const port = 6007;\n",
-       "          if (port) {\n",
-       "            url.port = port;\n",
-       "          }\n",
-       "          frame.src = url;\n",
-       "        })();\n",
-       "      </script>\n",
-       "    "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "notebook.display(port=6007, height=1000)"
+    "# Start TensorBoard by providing the right port\n",
+    "# notebook.display(port=6007, height=1000)"
    ]
   },
   {
@@ -819,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -835,35 +821,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      " Layer (type)                Output Shape              Param #   \n",
-      "=================================================================\n",
-      " flatten (Flatten)           (None, 784)               0         \n",
-      "                                                                 \n",
-      " dense (Dense)               (None, 384)               301440    \n",
-      "                                                                 \n",
-      " dense_1 (Dense)             (None, 10)                3850      \n",
-      "                                                                 \n",
-      "=================================================================\n",
-      "Total params: 305,290\n",
-      "Trainable params: 305,290\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Build the model.\n",
     "# Needed for `Sequential` without specified `input_shape`.\n",
@@ -885,45 +849,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Results summary\n",
-      "Results in tmp/hello_world\n",
-      "Showing 10 best trials\n",
-      "<keras_tuner.engine.objective.Objective object at 0x7ff450dfcf40>\n",
-      "Trial summary\n",
-      "Hyperparameters:\n",
-      "units: 384\n",
-      "activation: relu\n",
-      "dropout: False\n",
-      "lr: 0.0005452907696240787\n",
-      "Score: 0.9712499976158142\n",
-      "Trial summary\n",
-      "Hyperparameters:\n",
-      "units: 320\n",
-      "activation: relu\n",
-      "dropout: True\n",
-      "lr: 0.0005525349394079942\n",
-      "Score: 0.9690000116825104\n",
-      "Trial summary\n",
-      "Hyperparameters:\n",
-      "units: 480\n",
-      "activation: relu\n",
-      "dropout: True\n",
-      "lr: 0.00985793043338185\n",
-      "Score: 0.9544500112533569\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tuner.results_summary()"
    ]
