--- a/_sources/docs/keras-tuner.ipynb
+++ b/_sources/docs/keras-tuner.ipynb
@@ -2,14 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# KerasTuner"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "*The following code is based on [\"Getting started with KerasTuner\n",
     "\"](https://keras.io/guides/keras_tuner/getting_started/) from Luca Invernizzi, James Long, Francois Chollet, Tom O'Malley and Haifeng Jin.*"
@@ -17,7 +25,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "\n",
     "[KerasTuner](https://keras.io/guides/keras_tuner/getting_started/) is an easy-to-use, scalable hyperparameter optimization framework that solves the pain points of hyperparameter search. \n",
@@ -35,21 +47,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Installation"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "- KerasTuner requires Python 3.6+ and TensorFlow 2.0+."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "- Installation with pip: \n",
     "\n",
@@ -66,35 +90,66 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The tensorboard extension is already loaded. To reload it, use:\n",
+      "  %reload_ext tensorboard\n"
+     ]
+    }
+   ],
    "source": [
     "import keras_tuner as kt\n",
     "\n",
     "from tensorflow import keras\n",
     "from tensorflow.keras import layers\n",
     "\n",
-    "import numpy as np"
+    "from tensorboard import notebook\n",
+    "from tensorboard.plugins.hparams import api as hp\n",
+    "\n",
+    "import numpy as np\n",
+    "import datetime\n",
+    "\n",
+    "%load_ext tensorboard"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Define search space"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "- Write a function that creates and returns a Keras model. \n",
     "- Use the `hp` argument to define the hyperparameters during model creation."
@@ -102,8 +157,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 15,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "def build_model(hp):\n",
@@ -132,7 +191,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "You can quickly test if the model builds successfully.\n",
     "\n"
@@ -140,24 +203,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-04-08 10:21:59.502906: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x7fc3d8547520>"
+       "<keras.engine.sequential.Sequential at 0x7fe98a0fca30>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +227,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "- There are many other types of hyperparameters as well. \n",
     "- We can define multiple hyperparameters in the function. \n",
@@ -180,8 +243,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "def build_model(hp):\n",
@@ -218,16 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<keras.engine.sequential.Sequential at 0x7fc3b91c9e20>"
+       "<keras.engine.sequential.Sequential at 0x7fe98a138730>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +309,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "- As shown below, the hyperparameters are actual values. \n",
     "- In fact, they are just functions returning actual values. \n",
@@ -248,8 +323,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 19,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -267,14 +346,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Start search"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "- After defining the search space, we need to select a tuner class to run the search. \n",
     "- You may choose from `RandomSearch`, `BayesianOptimization` and `Hyperband`, which correspond to different tuning algorithms. \n",
@@ -283,7 +370,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "To initialize the tuner, we need to specify several arguments in the initializer:\n",
     "\n",
@@ -298,8 +389,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 20,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "tuner = kt.RandomSearch(\n",
@@ -315,15 +410,23 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "You can print a summary of the search space:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 21,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -348,23 +451,36 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Data"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "- Before starting the search, let's prepare the data.\n",
-    "- We use the MNIST dataset."
+    "- We use the MNIST dataset.\n",
+    "- Since we use hyperparameter tuning, we use training, evaluation and test data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 22,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "(x, y), (x_test, y_test) = keras.datasets.mnist.load_data()\n",
@@ -377,8 +493,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -434,7 +554,7 @@
        "        [0, 0, 0, ..., 0, 0, 0]]], dtype=uint8)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,18 +565,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
-    "\n",
     "x_train = np.expand_dims(x_train, -1).astype(\"float32\") / 255.0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "x_val = np.expand_dims(x_val, -1).astype(\"float32\") / 255.0\n",
@@ -470,7 +597,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "- Then, start the search for the best hyperparameter configuration. \n",
     "- All the arguments passed to search is passed to model.fit() in each execution. \n",
@@ -479,7 +610,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "- During the search, the model-building function is called with different hyperparameter values in different trial. \n",
     "- In each trial, the tuner would generate a new set of hyperparameter values to build the model. \n",
@@ -489,45 +624,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#tuner.search(\n",
-    "#    x_train, \n",
-    "#    y_train, \n",
-    "#    epochs=2, \n",
-    "#    validation_data=(x_val, y_val),\n",
-    "#)"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "- To use TensorBoard, we need to pass a keras.callbacks.TensorBoard instance to the callbacks."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 26,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trial 3 Complete [00h 00m 07s]\n",
-      "val_accuracy: 0.9580000042915344\n",
+      "Trial 3 Complete [00h 00m 10s]\n",
+      "val_accuracy: 0.9515500068664551\n",
       "\n",
-      "Best val_accuracy So Far: 0.9675500094890594\n",
-      "Total elapsed time: 00h 00m 25s\n",
+      "Best val_accuracy So Far: 0.9719000160694122\n",
+      "Total elapsed time: 00h 00m 34s\n",
       "INFO:tensorflow:Oracle triggered exit\n"
      ]
     }
    ],
    "source": [
+    "# Create TensorBoard folders\n",
+    "log_dir = \"tmp/tb_logs/\" + datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
+    "\n",
     "tuner.search(\n",
     "    x_train,\n",
     "    y_train,\n",
@@ -535,20 +667,28 @@
     "    validation_data=(x_val, y_val),\n",
     "    # Use the TensorBoard callback.\n",
     "    # The logs will be write to \"/tmp/tb_logs\".\n",
-    "    callbacks=[keras.callbacks.TensorBoard(\"/tmp/tb_logs\")],\n",
+    "    callbacks=[keras.callbacks.TensorBoard(log_dir=log_dir)],\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## Query results"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "- When search is over, you can retrieve the best model(s). \n",
     "- The model is saved at its best performing epoch evaluated on the validation_data."
@@ -556,39 +696,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6007 (pid 9162), started 0:26:39 ago. (Use '!kill 9162' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-a28e37ae1b3b98d5\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-a28e37ae1b3b98d5\");\n",
+       "          const url = new URL(\"http://localhost\");\n",
+       "          const port = 6007;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "%load_ext tensorboard"
+    "%tensorboard --logdir /tmp/tb_logs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- We first use TensorBoard in Visual Studio Code ([Stackoverflow](https://stackoverflow.com/a/66375514)):\n",
-    "\n",
-    "1. Open the command palette (Ctrl/Cmd + Shift + P)\n",
-    "2. Search for the command “Python: Launch TensorBoard” and press enter.\n",
-    "3. You will be able to select the folder where your TensorBoard log files are located. By default, the current working directory will be used."
+    "If TensorBoard does not open a window, try to use the following code to start TensorBoard:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Known TensorBoard instances:\n",
+      "  - port 6006: logdir logs/fit (started 5:45:52 ago; pid 2825)\n",
+      "  - port 6007: logdir /tmp/tb_logs (started 0:27:37 ago; pid 9162)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# View open TensorBoard instances\n",
+    "notebook.list() "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Start TensorBoard by providing the right port\n",
+    "# notebook.display(port=6007, height=1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "The following content is based on [\"Visualize the hyperparameter tuning process\"](https://keras.io/guides/keras_tuner/visualize_tuning/) by Jin Haifeng:\n",
+    "\n",
+    "- You have access to all the common features of the TensorBoard. \n",
+    "- For example, you can view the loss and metrics curves and visualize the computational graph of the models in different trials.\n",
+    "- In addition to these features, we also have a `HParams` tab, in which there are three views:\n",
+    "\n",
+    "1. In the table view, you can view the different trials in a table with the different hyperparameter values and evaluation metrics. On the left side, you can specify the filters for certain hyperparameters. \n",
+    "  \n",
+    "1. It also provides parallel coordinates view and scatter plot matrix view. They are just different visualization methods for the same data:\n",
+    "  - In the parallel coordinates view, each colored line is a trial. The axes are the hyperparameters and evaluation metrics.\n",
+    "  - In the scatter plot matrix view, each dot is a trial. The plots are projections of the trials on planes with different hyperparameter and metrics as the axes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# Get the top 2 models.\n",
     "models = tuner.get_best_models(num_models=2)\n",
+    "# Get best model\n",
     "best_model = models[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "# Build the model.\n",
@@ -600,7 +836,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "You can also print a summary of the search results."
    ]
@@ -608,7 +848,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
     "tuner.results_summary()"
@@ -616,21 +860,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
-    "- You will find detailed logs, checkpoints, etc, in the folder tuner/hello_world, i.e. directory/project_name.\n",
+    "- You will find detailed logs, checkpoints, etc, in your specified folder.\n",
     "\n",
-    "- You can also visualize the tuning results using TensorBoard and HParams plugin. For more information, please following this link.\n",
-    "\n"
+    "- You can also visualize the tuning results using TensorBoard and HParams plugin. For more information, please following this link."
    ]
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "interpreter": {
    "hash": "09dae4df73b471858248f7b697ec2bb8ee523eef7d0b410e464ff3946da6c31d"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('tf')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -645,8 +893,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.12"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
