--- a/_sources/docs/structured_data_classification_functions.ipynb
+++ b/_sources/docs/structured_data_classification_functions.ipynb
@@ -15,7 +15,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "- The following tutorial is an advanced version of ![](structured_data_classification_intro.ipynb) where we will use more functions."
+        "- The following tutorial is an advanced version of [](structured_data_classification_intro.ipynb) where we will use more functions."
       ]
     },
     {
@@ -26,6 +26,11 @@
       "source": [
         "## Setup"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     },
     {
       "cell_type": "code",
