--- a/_sources/docs/structured_data_classification_intro.ipynb
+++ b/_sources/docs/structured_data_classification_intro.ipynb
@@ -1067,9 +1067,7 @@
       "source": [
         "- In this example, we used a lot of code to demonstrate the data preprocessing as simple as possible.\n",
         "\n",
-        "- If you want to learn more about how to reduce this code by using functions, take a look at the following example which uses the same data and model:\n",
-        "\n",
-        "- ![](structured_data_classification_functions.ipynb)"
+        "- If you want to learn more about how to reduce this code by using functions, take a look at the following example which uses the same data and model: [](structured_data_classification_functions.ipynb)"
       ]
     }
   ],
