--- a/_sources/docs/keras-sequential.ipynb
+++ b/_sources/docs/keras-sequential.ipynb
@@ -6,7 +6,7 @@
         "id": "vNUlG_SB58nr"
       },
       "source": [
-        "# Sequential model\n",
+        "# Keras Sequential model\n",
         "\n",
         "*This is a companion notebook for the excellent book [Deep Learning with Python, Second Edition](https://www.manning.com/books/deep-learning-with-python-second-edition?a_aid=keras&a_bid=76564dff) ([code provided by François Chollet](https://github.com/fchollet/deep-learning-with-python-notebooks)).* \n",
         "\n",
